autenticación de servicios con token

--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@
 </head>
 
 <body>
-  <bc-app>Loading App content here ...</bc-app>
+  <bc-app><img src="./spinner.gif"></bc-app>
 </body>
 
 </html>
