estilos pagina y botones - ya funciona con microservicios

--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@
 </head>
 
 <body>
-  <bc-app><img src="./spinner.gif"></bc-app>
+  <bc-app><img style="position: absolute;left: 40%;top: 30%;" src="./spinner.gif"></bc-app>
 </body>
 
 </html>
